# ai_news_agent

./: README.md  pyproject.toml
.github/workflows/: daily.yml
src/ai_news_agent/: main.py
